feat: flesh out checkboxes wrapper

--- a/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
+++ b/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
@@ -24,7 +24,7 @@ Available variables:
       "size": "small"
     } only %}
   </legend>
-  <div class="c-bolt-input-list">
+  <div>
     {% if errors %}
       <div class="c-bolt-input-message c-bolt-input-message--invalid">
         {{ errors }}
