--- a/packages/global/styles/06-themes/themes-general/_themes-xlight.scss
+++ b/packages/global/styles/06-themes/themes-general/_themes-xlight.scss
@@ -11,6 +11,12 @@ $bolt-theme-xlight-link:         $bolt-theme-xlight-primary !default;
 $bolt-theme-xlight-heading-link: $bolt-theme-xlight-link !default;
 $bolt-theme-xlight-border:       rgba($bolt-theme-xlight-heading, $bolt-global-border-opacity);
 
+/**
+  * 1. This allows 'non-themed' sections to benefit from xlight
+  *    theming defaults which was already the case, but this makes
+  *    it official
+  */
+:root, /* [1] */
 .t-bolt-xlight {
   $bolt-theme-background:             $bolt-theme-xlight-background;
   $bolt-theme-primary:                $bolt-theme-xlight-primary;
@@ -49,7 +55,7 @@ $bolt-theme-xlight-border:       rgba($bolt-theme-xlight-heading, $bolt-global-b
   $bolt-theme-primary-background-focus: mix($bolt-global-button-hover-color, $bolt-theme-primary-background-default, $bolt-global-button-hover-mix);
   $bolt-theme-primary-text-focus:       bolt-text-contrast($bolt-theme-primary-background-focus);
   $bolt-theme-primary-border-focus:     $bolt-theme-primary-background-focus;
-  
+
 
 
   --bolt-theme-background:   $bolt-theme-background;
@@ -73,7 +79,7 @@ $bolt-theme-xlight-border:       rgba($bolt-theme-xlight-heading, $bolt-global-b
   --bolt-theme-heading-link-active: $bolt-theme-heading-link-active;
   --bolt-theme-heading-link-visited: $bolt-theme-heading-link-visited;
 
-  
+
   --bolt-theme-primary-background-default: $bolt-theme-primary-background-default;
   --bolt-theme-primary-text-default:       $bolt-theme-primary-text-default;
   --bolt-theme-primary-border-default:     $bolt-theme-primary-border-default;
