WIP icon background fix (#493)
* add new demos to PL for demostating icon background/color variations

* add styling for pl to manage icon list

* update icon schema

* fix issue with flexbox breaking icons

* fix typo

* Update 15-icon-theme-background-shape-variations.twig

* Removing band reference in the icon component

* fix: fixing icon background color default on lighter themes

* fix: update global xlight theme default to also apply to the :root as a smart default

* chore: updating yarn.lock

* fix: fixing CSS variable name used in icon component - fixes missing icon when teal option getting used; also adding in currentColor fallback if CSS vars not supported

--- a/packages/components/bolt-icon/src/icon.scss
+++ b/packages/components/bolt-icon/src/icon.scss
@@ -44,7 +44,6 @@ bolt-icon {
   color: var(--bolt-color-icon, inherit);
 }
 
-
 bolt-icon[size='small'],
 .c-bolt-icon--small > .c-bolt-icon__icon {
   width: 12px;
@@ -93,8 +92,8 @@ bolt-icon[size='xlarge'],
   opacity: 0.1;
   opacity: var(--bolt-theme-icon-background-opacity, 0.1);
 
-  background-color: inherit;
-  background-color: var(--bolt-theme-icon-background-color, inherit);
+  background-color: currentColor; // Fallback if CSS vars not supported
+  background-color: var(--bolt-theme-icon-background, var(--bolt-theme-text, currentColor));
 }
 
 .c-bolt-icon__background-shape--circle {
@@ -114,7 +113,7 @@ bolt-icon[size='xlarge'],
   $contrast-color: bolt-text-contrast($brand-color);
 
   --bolt-color-icon: $contrast-color;
-  --bolt-theme-icon-background-color: $brand-color;
+  --bolt-theme-icon-background: $brand-color;
   --bolt-theme-icon-background-opacity: 1;
 }
 
@@ -122,10 +121,10 @@ bolt-icon[size='xlarge'],
   $brand-color: bolt-color(blue);
   color: $brand-color;
   --bolt-color-icon: $brand-color;
-  --bolt-theme-icon-background-color: bolt-text-contrast($brand-color);
+  --bolt-theme-icon-background: bolt-text-contrast($brand-color);
   --bolt-theme-icon-background-opacity: 1;
-}
 
+}
 
 .c-bolt-icon__background {
   fill: currentColor;
