--- a/packages/components/bolt-form/src/elements/form-fieldset.twig
+++ b/packages/components/bolt-form/src/elements/form-fieldset.twig
@@ -7,6 +7,7 @@ Available variables:
   - legendInnerAttributes (object) - A Drupal attributes object for the element inside of legend.  This is really
       only present because it's used in Drupal and might therefore be needed.
   - legendTitle (string) - The title to display in the legend element.
+  - legendSize (enum) - A headline size to use for the legend.
   - children (renderable) - The form inputs .
   - errors (string) - Server-side errors
   - descriptionText (string) - An optional description for this fieldset
@@ -21,10 +22,10 @@ Available variables:
     {% include "@bolt/headline.twig" with {
       "text": legendTitle,
       "attributes": legendInnerAttributes,
-      "size": "small"
+      "size": legendSize|default('small')
     } only %}
   </legend>
-  <div class="c-bolt-input-list">
+  <div>
     {% if errors %}
       <div class="c-bolt-input-message c-bolt-input-message--invalid">
         {{ errors }}
