--- a/packages/components/bolt-form/src/form-icons.twig
+++ b/packages/components/bolt-form/src/form-icons.twig
@@ -10,11 +10,24 @@
     </li>
 
     {% for icon in icons %}
-      <li class="o-bolt-inline-list__item">
-        <div class="c-bolt-input-icon">
-          <bolt-icon name="{{ icon }}" size="medium"></bolt-icon>
-        </div>
-      </li>
+      {% if icon == 'search' %}
+
+        {# The search icon is a special case; the icon itself needs to be a submit button #}
+        <li class="o-bolt-inline-list__item">
+          <button class="c-bolt-input-icon c-bolt-input-icon--link" type="submit">
+            <bolt-icon name="{{ icon }}" size="medium"></bolt-icon>
+          </button>
+        </li>
+
+      {% else %}
+
+        <li class="o-bolt-inline-list__item">
+          <div class="c-bolt-input-icon">
+            <bolt-icon name="{{ icon }}" size="medium"></bolt-icon>
+          </div>
+        </li>
+
+      {% endif %}
     {% endfor %}
 
   </ul>
