--- a/packages/components/bolt-form/src/inputs/form-checkboxes.twig
+++ b/packages/components/bolt-form/src/inputs/form-checkboxes.twig
@@ -1,1 +1,17 @@
-<div{{ attributes.addClass('form-checkboxes') }}>{{ children }}</div>
+{#
+/**
+ * @file
+ * Theme override for a 'checkboxes' #type form element.
+ *
+ * Available variables
+ * - attributes: A list of HTML attributes for the wrapper element.
+ * - children: The rendered checkboxes.
+ */
+#}
+
+{% set classes = [
+  'c-bolt-input-list',
+  'c-bolt-input-list--stack-spacing-none'
+] %}
+
+<div{{ attributes.addClass(classes) }}>{{ children }}</div>
