fix: set default legendSize to small

--- a/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
+++ b/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
@@ -22,7 +22,7 @@ Available variables:
     {% include "@bolt/headline.twig" with {
       "text": legendTitle,
       "attributes": legendInnerAttributes,
-      "size": legendSize|default('medium')
+      "size": legendSize|default('small')
     } only %}
   </legend>
   <div>
