--- a/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/10-image-size-variations.twig
@@ -15,7 +15,7 @@
 
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500.jpg",
-  alt: "Bill Murrey"
+  alt: "Bill Murray"
 } only %},
 
 <h4>1151x638 jpg</h4>
