--- a/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/15-image-source-variations.twig
@@ -3,7 +3,7 @@
 
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500.jpg",
-  alt: "Bill Murrey",
+  alt: "Bill Murray",
 } only %}
 
 <h4>Src: Relative</h4>
@@ -11,7 +11,7 @@
 
 {% include '@bolt-components-image/image.twig' with {
   src: "../../images/placeholders/500x500.jpg",
-  alt: "Bill Murrey",
+  alt: "Bill Murray",
 } only %}
 
 <h4>Src: Source Set</h4>
@@ -20,5 +20,18 @@
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500.jpg",
   srcset: "/pattern-lab/images/placeholders/500x500-200.jpg 200w, /pattern-lab/images/placeholders/500x500-480.jpg 480w",
-  alt: "Bill Murrey",
+  alt: "Bill Murray",
+} only %}
+
+<h4>Src only that won't be found in <code>bolt.data.images</code></h4>
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/500x500-480.jpg",
+  alt: "Bill Murray",
+} only %}
+
+<h4>Src and srcset that won't be found in <code>bolt.data.images</code></h4>
+{% include '@bolt-components-image/image.twig' with {
+  src: "/pattern-lab/images/placeholders/500x500-480.jpg",
+  srcset: "/pattern-lab/images/placeholders/500x500-200.jpg 200w, /pattern-lab/images/placeholders/500x500-480.jpg 480w",
+  alt: "Bill Murray",
 } only %}
