--- a/apps/pattern-lab/src/_patterns/02-components/image/20-image-lazyload-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/20-image-lazyload-variations.twig
@@ -2,7 +2,7 @@
 
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500.jpg",
-  alt: "Bill Murrey",
+  alt: "Bill Murray",
   lazyload: true,
 } only %}
 
@@ -10,7 +10,7 @@
 
 {% include '@bolt-components-image/image.twig' with {
   src: "/pattern-lab/images/placeholders/500x500.jpg",
-  alt: "Bill Murrey",
+  alt: "Bill Murray",
   lazyload: false,
 } only %}
 
