updated php image processing to handle svgs properly

--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -22,7 +22,7 @@
 
 {% set ext = src|split('.')|last %}
 {% set srcset = src %}
-{% if imageDataBolt %}
+{% if imageDataBolt.srcset %}
   {% set srcset = imageDataBolt.srcset %}
 {% endif %}
 
