update box shadow values

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -86,5 +86,8 @@ ul.bolt-icon-list-demo {
     code {
       font-size: 0.7rem;
     }
+    &[class*="hoverable"]:hover {
+      @include  bolt-z-index('contentTop');
+    }
   }
 }
