--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -79,12 +79,15 @@ ul.bolt-icon-list-demo {
     height: 225px;
     margin: .5rem;
     position: relative;
-    width: 225px;
+    width: 325px;
     vertical-align: top;
     padding: 0.7rem;
 
     code {
       font-size: 0.7rem;
+    }
+    &[class*="hoverable"]:hover {
+      @include  bolt-z-index('contentTop');
     }
   }
 }
