Tooltip - Removed state and state handlers in favor of simple add class method

--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
@@ -2,14 +2,13 @@
 {% include "@bolt-components-tooltip/tooltip.twig" with {
   trigger: {
     type: "button",
-    text: "Trigger Closed",
+    text: "Closed",
     icon: {
-      name: "chevron-right",
-      position: "before"
+      name: "info-open",
     },
     toggle: {
-      text: "Trigger Open",
-      name: "close"
+      text: "Open",
+      name: "close-open"
     }
   },
   content: include("@bolt-components-link/link.twig", {
