--- a/apps/pattern-lab/src/_patterns/02-components/button/30-button-tags.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/30-button-tags.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
-{% for tag in schema.properties.tag.enum %}
+{% for tag in schema.properties.tag.enum|remove_null %}
   <p>Button Tag: {{ tag }}</p>
 
   {% include "@bolt-components-button/button.twig" with {
