fix issue with remove_null crashing

--- a/apps/pattern-lab/src/_patterns/02-components/button/05-button-rounded-options.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/05-button-rounded-options.twig
@@ -1,6 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
 
-{% for rounded in schema.properties.rounded.enum|remove_null %}
+{% for rounded in schema.properties.rounded.enum %}
   <p>{{ rounded|capitalize }} Button</p>
 
   {% include "@bolt-components-button/button.twig" with {
