add todo and fix misuse of "rounded" parameter

--- a/apps/pattern-lab/src/_patterns/02-components/buttons-group/10-button-group-icon-only.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/buttons-group/10-button-group-icon-only.twig
@@ -8,7 +8,7 @@
       icon: {
         name: "close"
       },
-      rounded: true
+      rounded: "rounded"
     },
     {
       text: "About Pega",
