Tooltip - Added more props and minor adjustments

--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/05--tooltip.twig
@@ -5,6 +5,7 @@
     text: "Closed",
     icon: {
       name: "info-open",
+      size: "medium"
     },
     toggle: {
       text: "Open",
@@ -19,13 +20,13 @@
       position: "before"
     }
   }),
-  id: "tooltip-1",
-  type: "help",
+  id: "tooltip-example-1",
+  type: "action",
   position: {
     horz: "center",
     vert: "top"
   },
-  noWrap: False,
+  noWrap: false,
   spacing: "small"
 } only %}
 </div>
