--- a/packages/components/bolt-tooltip/src/tooltip.twig
+++ b/packages/components/bolt-tooltip/src/tooltip.twig
@@ -8,6 +8,10 @@
 
   {% if trigger.icon %}
     {% set attributes = attributes.setAttribute("trigger-icon-name", trigger.icon.name) %}
+
+    {% if trigger.icon.size %}
+      {% set attributes = attributes.setAttribute("trigger-icon-size", trigger.icon.size) %}
+    {% endif %}
   {% endif %}
 
   {% if trigger.toggle %}
@@ -18,6 +22,22 @@
       {% set attributes = attributes.setAttribute("trigger-toggle-icon", trigger.toggle.name) %}
     {% endif %}
   {% endif %}
+{% endif %}
+
+{% if id %}
+  {% set attributes = attributes.setAttribute("trigger-id", id) %}
+{% endif %}
+
+{% if type %}
+  {% set attributes = attributes.setAttribute("type", type) %}
+{% endif %}
+
+{% if noWrap %}
+  {% set attributes = attributes.setAttribute("no-wrap", noWrap) %}
+{% endif %}
+
+{% if spacing %}
+  {% set attributes = attributes.setAttribute("spacing", spacing) %}
 {% endif %}
 
 {% if content %}
