test: testing alt text in background banner

--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
@@ -21,6 +21,7 @@
       contentItems: [{
         pattern: "image",
         src: "/pattern-lab/images/content/backgrounds/background-short-1.jpg",
+        alt: "Background banner of conference keynote",
         lazyload: true
       }]
     },
