fix: adding API fallback so useAspectRatio if previous "ratio" prop is defined; workaround to prevent this from being a major breaking change

--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -13,6 +13,10 @@
 {% if imageDataBolt.srcset %}
   {% set srcset = imageDataBolt.srcset %}
 {% endif %}
+
+{% if ratio is defined and ratio == false %}
+  {% set useAspectRatio = false %}
+{% endif %}
 {% set useAspectRatio = useAspectRatio ?? true %}
 
 {#--------------------#}
